# parse

./: README.md
selenium/: pyproject.toml  test_task.py
twitter_elon_musk/: parse_tweets.py
